--- a/index.html
+++ b/index.html
@@ -1,133 +1,114 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tug'ilgan kun muborak, Otabek!</title>
+  <title>Otabek's Birthday Cake 🎂</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: #fffbe6;
-      font-family: sans-serif;
-      text-align: center;
       overflow: hidden;
+      background: #000;
     }
-    #cake {
-      font-size: 100px;
-      margin-top: 100px;
-      position: relative;
-    }
-    .flame {
-      width: 10px;
-      height: 20px;
-      background: orange;
-      border-radius: 50%;
-      position: absolute;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      animation: flicker 0.3s infinite;
-    }
-    @keyframes flicker {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.5; }
+    canvas {
+      display: block;
     }
     #message {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 2em;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
       display: none;
-      margin-top: 30px;
-      font-size: 24px;
-      color: #333;
-      animation: fadeIn 2s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    canvas.confetti {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
       z-index: 999;
     }
   </style>
 </head>
 <body>
-  <div id="cake">🎂<div class="flame" id="flame"></div></div>
-  <p style="font-size: 18px;">🎤 Shamni o‘chirish uchun mikrofonga puflang</p>
-  <div id="message">
-    <strong>Otabek!</strong><br><br>
-    Tug‘ilgan kuning muborak! 🥳<br><br>
-    Senga sog‘liq, baxt va yorqin hayot tilayman!
-  </div>
-  <canvas class="confetti" id="confetti"></canvas>
+  <div id="message">🎉 Tug‘ilgan kuning muborak, Otabek! 💌</div>
+  <script type="module">
+    import * as THREE from 'https://cdn.skypack.dev/three@0.152.2';
+    import { GLTFLoader } from 'https://cdn.skypack.dev/three@0.152.2/examples/jsm/loaders/GLTFLoader.js';
+    import { OrbitControls } from 'https://cdn.skypack.dev/three@0.152.2/examples/jsm/controls/OrbitControls.js';
 
-  <script>
-    const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-    navigator.mediaDevices.getUserMedia({ audio: true })
-      .then(stream => {
-        const source = audioContext.createMediaStreamSource(stream);
-        const analyser = audioContext.createAnalyser();
-        source.connect(analyser);
-        analyser.fftSize = 256;
-        const dataArray = new Uint8Array(analyser.frequencyBinCount);
-        function detectBlow() {
-          analyser.getByteFrequencyData(dataArray);
-          const avg = dataArray.reduce((a, b) => a + b) / dataArray.length;
-          if (avg > 60) blowOut();
-          else requestAnimationFrame(detectBlow);
-        }
-        detectBlow();
-      })
-      .catch(e => console.error('Mikrofon ishlamadi:', e));
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 2, 5);
+
+    const renderer = new THREE.WebGLRenderer({antialias: true});
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    const controls = new OrbitControls(camera, renderer.domElement);
+    controls.autoRotate = true;
+    controls.autoRotateSpeed = 1.5;
+
+    const light = new THREE.PointLight(0xffffff, 1.5);
+    light.position.set(5, 5, 5);
+    scene.add(light);
+    scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+
+    const loader = new GLTFLoader();
+
+    // Load Cake Model
+    loader.load('/models/cake.glb', gltf => {
+      const cake = gltf.scene;
+      cake.scale.set(1.2, 1.2, 1.2);
+      cake.position.y = -1;
+      scene.add(cake);
+    });
+
+    // Load Envelope Model (hidden at first)
+    let envelope;
+    loader.load('/models/envelope.glb', gltf => {
+      envelope = gltf.scene;
+      envelope.scale.set(0.5, 0.5, 0.5);
+      envelope.position.set(0, 0.5, 0);
+      envelope.visible = false;
+      scene.add(envelope);
+    });
+
+    function showMessage() {
+      document.getElementById('message').style.display = 'block';
+    }
 
     function blowOut() {
-      document.getElementById('flame').style.display = 'none';
-      document.getElementById('message').style.display = 'block';
-      startConfetti();
+      envelope.visible = true;
+      showMessage();
     }
 
-    function startConfetti() {
-      const canvas = document.getElementById('confetti');
-      const ctx = canvas.getContext('2d');
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
+    // Audio Detection
+    navigator.mediaDevices.getUserMedia({ audio: true }).then(stream => {
+      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+      const source = audioCtx.createMediaStreamSource(stream);
+      const analyser = audioCtx.createAnalyser();
+      analyser.fftSize = 2048;
+      const data = new Uint8Array(analyser.frequencyBinCount);
+      source.connect(analyser);
 
-      const confetti = Array.from({length: 200}, () => ({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height - canvas.height,
-        r: Math.random() * 6 + 4,
-        d: Math.random() * 10 + 10,
-        color: `hsl(${Math.random() * 360}, 70%, 60%)`,
-        tilt: Math.random() * 10 - 10
-      }));
-
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        confetti.forEach(p => {
-          ctx.beginPath();
-          ctx.lineWidth = p.r;
-          ctx.strokeStyle = p.color;
-          ctx.moveTo(p.x + p.tilt + p.r, p.y);
-          ctx.lineTo(p.x + p.tilt, p.y + p.r);
-          ctx.stroke();
-        });
-        confetti.forEach(p => {
-          p.y += Math.cos(p.d) + 1;
-          p.tilt += Math.sin(p.d) * 0.5;
-          if (p.y > canvas.height) {
-            p.y = -10;
-            p.x = Math.random() * canvas.width;
-          }
-        });
-        requestAnimationFrame(draw);
+      function detectBlow() {
+        analyser.getByteTimeDomainData(data);
+        let sum = 0;
+        for (let i = 0; i < data.length; i++) {
+          const val = (data[i] - 128) / 128;
+          sum += val * val;
+        }
+        const volume = Math.sqrt(sum / data.length);
+        if (volume > 0.1) blowOut();
       }
 
-      draw();
+      setInterval(detectBlow, 300);
+    });
+
+    function animate() {
+      requestAnimationFrame(animate);
+      controls.update();
+      renderer.render(scene, camera);
     }
+
+    animate();
   </script>
 </body>
 </html>
